fixes stretched svgs on ie11

--- a/src/styles/_b-card.scss
+++ b/src/styles/_b-card.scss
@@ -21,6 +21,7 @@
     // The element which is a child of the feature needs to have 100% height.
     .b-card__feature > * {
       display: flex;
+      align-items: center;
       // Prevents subpixel issue
       margin-top: -2px;
     }
