--- a/src/styles/_b-icon.scss
+++ b/src/styles/_b-icon.scss
@@ -16,8 +16,7 @@
     margin-bottom: -0.6em;
   }
   &--large {
-    max-width: 3rem;
-    width: 100%;
+    height: 3rem;
     width: auto;
   }
 }
